<resources>
    <string name="app_name">Ippopay Demo</string>
    <string name="txt_title">MI, Lenovo, One Plus</string>
    <string name="txt_description">Brand New Android Mobiles are available for New Year Sale :). Order Now using Foloosi Payment</string>

    <string name="txt_dummy_amt">21.00</string>
    <string name="txt_currency">Currency Code</string>
    <string name="txt_price">Price</string>
    <string name="txt_pay">Pay Now</string>
</resources>
